# 007vasy.github.io

./: .gitignore  README.md  defillama_sample.json  file_converter.js  index.js  index_with_logos.html  package-lock.json  package.json
docs/: blocks.json  index.html
docs/banteg-friend-tech-3d/: index.html
docs/brilliant/: brilliant_courses.json  index.html
docs/ccip/: ccip_info.json  ccip_info_new.json  data.json  index.html
docs/ccip-ar/: chains_and_lanes_with_urls.json  extracted_summaries.json  fixed_chains_and_lanes.json  index.html
docs/cosmere/: index.html
docs/defi/: index.html
docs/dyson-swarm/: data.json
docs/easy-way-to-put-data-on-chain/: easy-way-to-put-data-on-chain.md  index.html
docs/physlean/: index.html  physlean_graph.json
docs/tech-tree/: index.html  notes.md  tech_tree.json
scraper/: brilliant_scraper_cli.py  ccip_scraper.py  cosmo_csv_to_json.py  physlean_graph_builder.py  pyproject.toml  tech_tree_pre_process.py  utils.py
scraper/tech_tree_raw_data/: intcoop.graph  longevity.graph  nanotech.graph  neurotech.graph  spacetree.graph
sudoku/: Cargo.toml
sudoku/src/: lib.rs
